[gd_scene load_steps=4 format=2]

[ext_resource path="res://font_s28.tres" type="DynamicFont" id=1]
[ext_resource path="res://Server/serverStatus.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.192157, 0.192157, 0.870588 )

[node name="serverStatus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur_level" type="OptionButton" parent="."]
anchor_left = 0.438
anchor_top = 0.106
anchor_right = 0.438
anchor_bottom = 0.106
margin_left = -105.46
margin_top = -17.5871
margin_right = 106.54
margin_bottom = 17.4129
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="cur_level"]
margin_left = -267.934
margin_top = -4.71936
margin_right = -75.9336
margin_bottom = 32.2806
custom_fonts/font = ExtResource( 1 )
text = "Current Level"

[node name="cur_gamemode" type="OptionButton" parent="."]
anchor_left = 0.438
anchor_top = 0.106
anchor_right = 0.438
anchor_bottom = 0.106
margin_left = -105.46
margin_top = 103.575
margin_right = 106.54
margin_bottom = 146.575
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="cur_gamemode"]
margin_left = -267.934
margin_top = -4.71936
margin_right = -75.9336
margin_bottom = 32.2806
custom_fonts/font = ExtResource( 1 )
text = "Current Mode"

[node name="reload" type="Button" parent="."]
margin_left = 295.959
margin_top = 507.508
margin_right = 462.959
margin_bottom = 564.508
custom_fonts/font = ExtResource( 1 )
text = "RELOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="Label" parent="."]
margin_left = 187.247
margin_top = 304.156
margin_right = 353.247
margin_bottom = 345.156
custom_fonts/font = ExtResource( 1 )
text = "Players 10/20 (5 bots)"

[node name="back" type="Button" parent="."]
margin_left = 750.519
margin_top = 507.508
margin_right = 869.519
margin_bottom = 560.508
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="."]
margin_left = 49.4441
margin_top = 31.5626
margin_right = 117.444
margin_bottom = 75.5626
custom_fonts/font = ExtResource( 1 )
text = "Edit"

[node name="console" type="LineEdit" parent="."]
visible = false
margin_left = 341.98
margin_top = 171.373
margin_right = 912.98
margin_bottom = 236.373
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="TextEdit" parent="console"]
margin_top = 65.0
margin_right = 571.0
margin_bottom = 383.0
custom_styles/normal = SubResource( 1 )
readonly = true
[connection signal="pressed" from="reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="edit" to="." method="_on_edit_pressed"]
[connection signal="text_entered" from="console" to="." method="_on_console_text_entered"]
